Tests/Runtime2/Error/RetryOnly/.build/timedretrycatcher.pr
[
  {
    "name": "TimedRetryCatcher",
    "description": "Build goal TimedRetryCatcher",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %timedRetryCaught% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%timedRetryCaught%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              },
              {
                "name": "Type",
                "value": "",
                "type": "string"
              },
              {
                "name": "AsDefault",
                "value": false,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/TimedRetryCatcher.goal",
    "prPath": "/.build/timedretrycatcher.pr",
    "hash": "0c5b0bce71ea2d237dd7b436a42bc5268c0db5828e914f20dc18abea890d7450",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]